Fixes drop down menu from sometimes breaking by wrapping.

--- a/tool-ui/src/main/webapp/style/v3/drop-down.less
+++ b/tool-ui/src/main/webapp/style/v3/drop-down.less
@@ -114,6 +114,7 @@ input[type="text"].dropDown-search {
   line-height: @input-height;
   padding: 0px 15px 0px 25px;
   position: relative;
+  white-space: nowrap;
 
   &.state-hover {
     background-color: fade(@color-focus, 10%);
